--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -1,7 +1,6 @@
 .ExperienceDetail {
   width: 100%;
   height: 100%;
-  // max-width: 1800px;
 }
 
 .containerDesk {
@@ -40,6 +39,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .city {
@@ -51,6 +51,8 @@
 // ---ORGANIZ SECTION---
 
 .containerOrganiz {
+  order: 4;
+  width: 100%;
   display: flex;
   gap: 20px;
   padding-top: 20px;
@@ -66,12 +68,34 @@
 }
 
 // ---DESCRIPTION----
+
+.boxPicture {
+  display: none;
+}
+
 .infoDescription {
   padding-top: 20px;
 }
 
+.experienceBtn {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: rgb(29, 29, 61);
+  color: rgb(243, 239, 239);
+  border: none;
+  border-radius: 10px;
+}
+
 .suggestion {
   padding-bottom: 40px;
+}
+
+.footer {
+  display: none;
 }
 
 // ---BOTTOM MENU----
@@ -85,4 +109,86 @@
   display: flex;
   justify-content: space-around;
   padding: 10px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .containerSlider {
+    display: none;
+  }
+
+  .containerDesk {
+    padding: 30px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    background-color: rgb(25, 31, 25);
+  }
+
+  .topMenu {
+    display: flex;
+    gap: 14px;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .info {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .infoPriceStars {
+    display: none;
+  }
+
+  .containerOrganiz {
+    display: flex;
+    align-items: center;
+    width: auto;
+  }
+
+  // ---PIC AND DESCRIPTION---
+  .PicAndDescription {
+    padding-top: 20px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
+
+  .infoDescription {
+    width: 380px;
+    padding: 0;
+  }
+
+  .boxPicture {
+    display: block;
+
+    .mainPic img {
+      width: 700px;
+      object-fit: cover;
+      border-radius: 20px;
+    }
+  }
+
+  .containerPicBottom {
+    display: flex;
+    width: 80%;
+    gap: 20px;
+
+    .picBottom img {
+      width: 220px;
+      height: 200px;
+      border-radius: 20px;
+    }
+  }
+
+  .footer {
+    display: block;
+    background-color: rgb(43, 43, 109);
+    height: 24vh;
+  }
 }
