--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -77,6 +77,10 @@
   padding-top: 20px;
 }
 
+.infoPriceStarsDesk {
+  display: none;
+}
+
 .experienceBtn {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -143,6 +147,12 @@
     display: none;
   }
 
+  .infoPriceStarsDesk {
+    display: block;
+    font-weight: bold;
+    padding-top: 20px;
+  }
+
   .containerOrganiz {
     display: flex;
     align-items: center;
@@ -150,38 +160,65 @@
   }
 
   // ---PIC AND DESCRIPTION---
-  .PicAndDescription {
+  .picAndDescription {
     padding-top: 20px;
     display: flex;
     width: 100%;
     height: 100%;
     justify-content: space-evenly;
     align-items: flex-start;
+    gap: 20px;
   }
 
   .infoDescription {
-    width: 380px;
+    width: 40vw;
     padding: 0;
+
+    h2 {
+      padding-bottom: 20px;
+    }
+  }
+
+  .experienceBtn {
+    margin-top: 40px;
   }
 
   .boxPicture {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 
     .mainPic img {
-      width: 700px;
+      width: 55vw;
+      height: 70vh;
       object-fit: cover;
       border-radius: 20px;
+    }
+
+    .iconHeartDesk {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 20px;
+      right: 40px;
+      cursor: pointer;
+      background-color: white;
+      padding: 10px;
+      border-radius: 50%;
     }
   }
 
   .containerPicBottom {
     display: flex;
-    width: 80%;
+    width: 55vw;
     gap: 20px;
 
     .picBottom img {
-      width: 220px;
-      height: 200px;
+      width: 17vw;
+      height: 24vh;
       border-radius: 20px;
     }
   }
