--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -3,10 +3,6 @@
   height: 100%;
 }
 
-.containerDesk {
-  display: none;
-}
-
 .containerSlider {
   position: relative;
   img {
@@ -102,22 +98,14 @@
   display: none;
 }
 
-// ---BOTTOM MENU----
-.menu {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: #ffffff;
-  border-top: 1px solid #dddddd;
-  display: flex;
-  justify-content: space-around;
-  padding: 10px 0;
-}
-
 @media screen and (min-width: 768px) {
   .containerSlider {
     display: none;
+  }
+
+  .navExperienceDetail {
+    background-color: rgb(48, 22, 22);
+    height: 20vh;
   }
 
   .containerDesk {
@@ -127,15 +115,6 @@
     justify-content: space-between;
     width: 100%;
     background-color: rgb(25, 31, 25);
-  }
-
-  .topMenu {
-    display: flex;
-    gap: 14px;
-  }
-
-  .menu {
-    display: none;
   }
 
   .info {
