--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -20,6 +20,7 @@
   position: absolute;
   top: 8%;
   right: 8%;
+  border: none;
   cursor: pointer;
   background-color: white;
   border-radius: 50%;
@@ -187,6 +188,7 @@
       background-color: white;
       padding: 10px;
       border-radius: 50%;
+      border: none;
     }
   }
 
