--- a/final-project/src/styles/globals.css
+++ b/final-project/src/styles/globals.css
@@ -18,4 +18,7 @@ ul {
 :root {
   --color-black: #3a2d32;
   --color-main-first: #ff9b02;
+  --star-size: 40px;
+  --star-color: #fff;
+  --star-background: #fc0;
 }
