--- a/final-project/src/styles/SignUpForm.module.scss
+++ b/final-project/src/styles/SignUpForm.module.scss
@@ -1,10 +1,12 @@
 .SignUpForm {
+  position: fixed;
   background-color: rgb(219, 213, 213);
   padding: 80px;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
   gap: 6px;
+  height: 600px;
 
   input {
     width: 200px;
@@ -27,5 +29,23 @@
     font-size: 18px;
     border: none;
     border-radius: 10px;
+  }
+}
+
+.closeBtn {
+  display: block;
+  position: relative;
+  top: -20px;
+  right: -26%;
+  color: rgb(106, 121, 206);
+  border: none;
+  background: transparent;
+  outline: none;
+}
+
+@media screen and (min-width: 768px) {
+  .closeBtn {
+    top: -20px;
+    right: -9%;
   }
 }
