--- a/final-project/src/styles/Intro.module.scss
+++ b/final-project/src/styles/Intro.module.scss
@@ -2,7 +2,9 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background-color: rgb(33, 100, 122);
+  // background-color: rgb(33, 100, 122);
+
+  background-color: #edd6bb;
 }
 
 .main {
