style: add new variable color in globals.scss

--- a/final-project/src/styles/globals.css
+++ b/final-project/src/styles/globals.css
@@ -21,4 +21,7 @@ ul {
   --star-size: 40px;
   --star-color: #fff;
   --star-background: #fc0;
+  --color-back1: #edd6bb;
+  --color-back2: #e7dfd5;
+  --color-back3: #eb5157;
 }
