--- a/final-project/src/styles/Intro.module.scss
+++ b/final-project/src/styles/Intro.module.scss
@@ -2,9 +2,7 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  // background-color: rgb(33, 100, 122);
-
-  background-color: #edd6bb;
+  background-color: var(--color-back3);
 }
 
 .main {
