--- a/final-project/src/styles/Intro.module.scss
+++ b/final-project/src/styles/Intro.module.scss
@@ -11,9 +11,9 @@
   flex-direction: column;
   align-items: center;
 
-  img {
-    width: 5rem;
-  }
+  // img {
+  //   width: 5rem;
+  // }
 
   h1 {
     width: 280px;
@@ -47,9 +47,14 @@
     gap: 1.25rem;
   }
   .logo {
-    position: relative;
-    width: 12.5rem;
-    height: 11.25rem;
+    width: 8.75rem;
+    height: auto;
+  }
+
+  .logoImage {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
   }
 }
 
