--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -1,7 +1,6 @@
 .Home {
   width: 100%;
   height: 100%;
-  // max-width: 112.5rem;
 }
 
 // ---NAV---
@@ -12,10 +11,12 @@
   flex-direction: column;
   align-items: center;
   gap: 1.25rem;
-  padding-bottom: 3.75rem;
-  padding-top: 2.5rem;
   background-color: var(--color-main-first);
   padding-bottom: 1.875rem;
+  background: url("/ill2.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 40vh;
 }
 
 .containerInput {
@@ -96,14 +97,12 @@
 @media screen and (min-width: 768px) {
   // ----NAV---
   .navPageHome {
-    background: linear-gradient(rgba(139, 138, 138, 0.4), rgba(0, 0, 0, 0.1)),
-      url("/sicilyexp-pic.jpeg");
+    background: url("/ill1.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 70vh;
-    padding: 10px 40px;
+    height: 90vh;
   }
 
   .containerInput {
