--- a/final-project/src/styles/Footer.module.scss
+++ b/final-project/src/styles/Footer.module.scss
@@ -1,7 +1,66 @@
-// --FOOTER--
 .Footer {
-  // display: block;
-  height: 30vh;
-  color: white;
-  background-color: rgb(16, 16, 34);
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  // --FOOTER--
+  .Footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+    color: var(--color-black);
+    background-color: var(--color-back2);
+    padding: 30px;
+    a {
+      color: var(--color-main-first);
+    }
+
+    a:hover {
+      color: var(--color-black);
+    }
+  }
+
+  .leftSection {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 360px;
+    gap: 14px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+
+    h3 {
+      font-size: 16px;
+    }
+  }
+
+  .logoImage {
+    width: 80px;
+    height: auto;
+    object-fit: contain;
+  }
+}
+
+.rightSection {
+  text-align: center;
+  p {
+    font-weight: bold;
+  }
+}
+
+.containerContributors {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 28px;
+}
+
+.contributor {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
 }
