--- a/final-project/src/styles/Footer.module.scss
+++ b/final-project/src/styles/Footer.module.scss
@@ -2,7 +2,7 @@
   display: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   // --FOOTER--
   .Footer {
     width: 100%;
@@ -11,7 +11,7 @@
     align-items: baseline;
     color: var(--color-black);
     background-color: var(--color-back2);
-    padding: 30px;
+    padding: 1.875rem;
     a {
       color: var(--color-main-first);
     }
@@ -26,19 +26,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 360px;
-    gap: 14px;
-    font-size: 14px;
+    width: 22.5rem;
+    gap: 0.875rem;
+    font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.5;
 
     h3 {
-      font-size: 16px;
+      font-size: 1rem;
     }
   }
 
   .logoImage {
-    width: 80px;
+    width: 5rem;
     height: auto;
     object-fit: contain;
   }
@@ -52,15 +52,15 @@
 }
 
 .containerContributors {
-  padding-top: 20px;
+  padding-top: 1.25rem;
   display: flex;
   justify-content: center;
-  gap: 28px;
+  gap: 1.75rem;
 }
 
 .contributor {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 4px;
+  gap: 0.25rem;
 }
