style: add Mobile style in Intro

--- a/final-project/src/styles/globals.css
+++ b/final-project/src/styles/globals.css
@@ -24,4 +24,6 @@ ul {
   --color-back1: #edd6bb;
   --color-back2: #e7dfd5;
   --color-back3: #eb5157;
+  --color-blue: #1b1725;
+  --color-yellow: #ffcf56;
 }
