--- a/final-project/src/styles/Intro.module.scss
+++ b/final-project/src/styles/Intro.module.scss
@@ -2,7 +2,12 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background-color: var(--color-back3);
+  background-color: var(--color-blue);
+  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(16, 14, 44, 0.836)),
+    url("/mobile.jpeg");
+  background-repeat: no-repeat;
+  background-position: center;
+  color: var(--color-back2);
 }
 
 .main {
@@ -30,12 +35,14 @@
     border: none;
     font-size: 1rem;
     border-radius: 0.625rem;
+    background-color: var(--color-yellow);
     cursor: pointer;
+    color: var(--color-black);
   }
 
   a {
     padding-top: 1.25rem;
-    color: rgb(204, 201, 31);
+    color: var(--color-back2);
   }
 
   .containerBtn {
