--- a/final-project/src/styles/Intro.module.scss
+++ b/final-project/src/styles/Intro.module.scss
@@ -17,7 +17,7 @@
   align-items: center;
 
   h1 {
-    width: 280px;
+    width: 17.5rem;
     text-align: center;
     font-size: 1.375rem;
     padding-top: 1.875rem;
@@ -62,8 +62,15 @@
 }
 
 @media screen and (min-width: 768px) {
-  .main {
-    padding-top: 3.75rem;
+  .Intro {
+    background: linear-gradient(
+        rgba(255, 255, 255, 0.5),
+        rgba(16, 14, 44, 0.836)
+      ),
+      url("/desk.jpeg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 
     h1 {
       font-size: 1.375rem;
