--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -77,6 +77,7 @@
   padding: 20px 40px 0px 40px;
   color: white;
   margin-bottom: 80px;
+  cursor: pointer;
 
   .boxIconTop {
     display: flex;
