style: change input background, adjust padding, change h2 color

--- a/final-project/src/styles/globals.css
+++ b/final-project/src/styles/globals.css
@@ -23,7 +23,10 @@ ul {
   --star-background: #fc0;
   --color-back1: #edd6bb;
   --color-back2: #e7dfd5;
+  --color-white: #f5efe8;
   --color-back3: #eb5157;
   --color-blue: #1b1725;
+  --color-blue2: #0a011f;
   --color-yellow: #ffcf56;
+  --color-orange: #cf4012;
 }
