--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -10,17 +10,39 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.25rem;
   background-color: var(--color-main-first);
-  padding-bottom: 1.875rem;
-  background: url("/homeMobile.jpeg");
+  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(16, 14, 44, 0.836)),
+    url("/HomeMobile.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   height: 40vh;
+  color: var(--color-white);
+
+  h1 {
+    padding-top: 40px;
+    font-size: 20px;
+    width: 300px;
+    color: var(--color-black);
+    text-align: center;
+  }
 }
 
 .containerInput {
+  padding-top: 20px;
+
+  input {
+    width: 300px;
+    height: 32px;
+    padding-left: 8px;
+    font-size: 16px;
+    background-color: var(--color-blue2);
+    color: var(--color-white);
+    outline: none;
+    border: none;
+    border-radius: 4px;
+  }
+
   button {
     display: none;
   }
@@ -98,18 +120,28 @@
 @media screen and (min-width: 768px) {
   // ----NAV---
   .navPageHome {
-    background: url("/homePic.jpeg");
+    background: linear-gradient(
+        rgba(16, 14, 44, 0.836),
+        rgba(16, 14, 44, 0.836)
+      ),
+      url("/HomePic.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     width: 100%;
     height: 90vh;
+
+    h1 {
+      width: 100%;
+      font-size: 30px;
+      color: var(--color-white);
+    }
   }
 
   .containerInput {
     display: flex;
     justify-content: center;
-    padding-top: 100px;
+    padding-top: 60px;
 
     button {
       display: block;
@@ -127,15 +159,18 @@
     padding: 100px 40px 100px 40px;
     gap: 10px;
     width: 100%;
-    background-color: orange;
+    background-color: var(--color-blue2);
+    color: var(--color-orange);
 
-    h1,
+    h2,
     p {
       width: 700px;
     }
 
-    h1 {
+    h2 {
       text-align: center;
+      font-size: 40px;
+      color: var(--color-orange);
     }
   }
 
