--- a/final-project/src/styles/Menu.module.scss
+++ b/final-project/src/styles/Menu.module.scss
@@ -22,7 +22,8 @@
     align-items: center;
     width: 100%;
     padding: 16px 40px;
-    background-color: rgba(238, 238, 238, 0.815);
+
+    // background-color: rgba(238, 238, 238, 0.815);
 
     .topMenu {
       display: flex;
@@ -30,7 +31,7 @@
     }
 
     a {
-      color: black;
+      color: var(--color-back2);
     }
   }
 
