--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -23,7 +23,7 @@
     padding-top: 40px;
     font-size: 20px;
     width: 300px;
-    color: var(--color-black);
+    color: var(--color-blue2);
     text-align: center;
   }
 }
@@ -146,6 +146,13 @@
     button {
       display: block;
       cursor: pointer;
+      background-color: var(--color-yellow);
+      height: 32px;
+      width: 80px;
+      font-weight: bold;
+      font-size: 16px;
+      border: none;
+      border-radius: 4px;
     }
   }
 
