--- a/final-project/src/styles/Intro.module.scss
+++ b/final-project/src/styles/Intro.module.scss
@@ -2,12 +2,11 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background-color: var(--color-blue);
-  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(16, 14, 44, 0.836)),
+  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(16, 14, 44, 0.836)),
     url("/mobile.jpeg");
   background-repeat: no-repeat;
   background-position: center;
-  color: var(--color-back2);
+  color: var(--color-white);
 }
 
 .main {
@@ -42,7 +41,7 @@
 
   a {
     padding-top: 1.25rem;
-    color: var(--color-back2);
+    color: var(--color-white);
   }
 
   .containerBtn {
