style: change Home and Footer colors

--- a/final-project/src/styles/Footer.module.scss
+++ b/final-project/src/styles/Footer.module.scss
@@ -9,11 +9,11 @@
     display: flex;
     justify-content: space-evenly;
     align-items: baseline;
-    color: var(--color-black);
-    background-color: var(--color-back2);
+    color: var(--color-blue);
+    background-color: var(--color-orange);
     padding: 1.875rem;
     a {
-      color: var(--color-main-first);
+      color: var(--color-white);
     }
 
     a:hover {
