--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -41,6 +41,7 @@
     outline: none;
     border: none;
     border-radius: 4px;
+    margin-bottom: 20px;
   }
 
   button {
@@ -49,6 +50,9 @@
 }
 
 // ---MAIN---
+.mainPageHome {
+  background-color: var(--color-blue2);
+}
 .textDesk {
   display: none;
 }
@@ -58,6 +62,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 40px 20px 20px 20px;
+  color: var(--color-orange);
+
+  a {
+    color: var(--color-yellow);
+  }
 }
 
 // ---SLIDER---
