--- a/final-project/src/styles/Favorites.module.scss
+++ b/final-project/src/styles/Favorites.module.scss
@@ -11,26 +11,35 @@
 }
 
 .textNav {
-  padding-top: 70px;
+  padding-top: 4.375rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
   h1 {
-    padding: 10px;
-    width: 400px;
+    padding: 0.625rem;
+    width: 25rem;
     line-height: 1.5;
-    font-size: 24px;
+    font-size: 1.5rem;
   }
 }
 
-@media screen and (min-width: 768px) {
+.mainFavorites {
+  min-height: 50vh;
+  background-color: var(--color-back2);
+}
+
+@media screen and (min-width: 48rem) {
   .textNav {
-    padding-top: 20px;
+    padding-top: 1.25rem;
     h1 {
-      width: 600px;
+      width: 37.5rem;
       line-height: 1.5;
     }
+  }
+
+  .mainFavorites {
+    min-height: 80vh;
   }
 }
