feat : add sign in and sign out buttons

--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -3,6 +3,12 @@
   height: 100%;
 }
 
+.arrowButton {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 .containerSlider {
   position: relative;
   img {
