--- a/final-project/src/styles/Profile.module.scss
+++ b/final-project/src/styles/Profile.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background-color: #c3f3f5;
+  background-color: var(--color-blue2);
 }
 
 .infoProfile {
@@ -13,16 +13,19 @@
   justify-content: center;
   align-items: center;
   padding-top: 5rem;
+  color: var(--color-white);
 
   img {
     width: 12.5rem;
     height: 12.5rem;
     border-radius: 50%;
     object-fit: cover;
+    border: 4px solid var(--color-orange);
   }
 
   h2 {
     font-size: 1.125rem;
+    color: var(--color-orange);
   }
 }
 
@@ -33,13 +36,26 @@
 }
 
 .title {
+  color: var(--color-orange);
   padding: 1.875rem 3.75rem;
   font-size: 1.25rem;
   padding: 2.5rem 1.25rem 1.25rem 1.25rem;
 }
 
 @media screen and (min-width: 768px) {
+  .nav {
+    height: 34vh;
+    background-color: var(--color-blue2);
+  }
+
+  .infoProfile {
+    padding-top: 0px;
+  }
   .title {
-    padding: 2.5rem 7.5rem 2.5rem 7.5rem;
+    padding: 0px 7.5rem 2.5rem 7.5rem;
+    color: var(--color-orange);
+  }
+  .bookings {
+    padding-bottom: 30px;
   }
 }
