feat: add Menu and Footer in ExperienceDetail Page

--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -105,8 +105,8 @@
   }
 
   .navExperienceDetail {
-    background-color: rgb(48, 22, 22);
-    height: 20vh;
+    background-color: var(--color-blue2);
+    height: 34vh;
   }
 
   .containerDesk {
