--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
   background-color: var(--color-main-first);
   background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(16, 14, 44, 0.836)),
     url("/HomeMobile.jpeg");
@@ -20,7 +21,7 @@
   color: var(--color-white);
 
   h1 {
-    padding-top: 40px;
+    padding-top: 10px;
     font-size: 20px;
     width: 300px;
     color: var(--color-blue2);
@@ -29,7 +30,7 @@
 }
 
 .containerInput {
-  padding-top: 20px;
+  // padding-top: 20px;
 
   input {
     width: 300px;
@@ -127,7 +128,8 @@
   .containerInput {
     display: flex;
     justify-content: center;
-    padding-top: 60px;
+    // margin-top: 60px;
+    // padding-top: 60px;
 
     button {
       display: block;
