--- a/final-project/src/components/card/index.module.scss
+++ b/final-project/src/components/card/index.module.scss
@@ -1,19 +1,38 @@
-.box {
-  background-color: darkblue;
-  width: 600px;
+.cardBox {
+  position: relative;
+  max-width: 450px;
+  width: 100%;
   min-height: 300px;
   border-radius: 20px;
   padding: 20px 40px 0px 40px;
   color: white;
   cursor: pointer;
+  overflow: hidden;
+
+  .cardBoxImage {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
   .boxIconTop {
     display: flex;
     justify-content: space-between;
+    position: relative;
+    z-index: 1;
   }
 
   .boxText {
-    background-color: white;
+    position: relative;
+    background-color: aquamarine;
     color: black;
     margin-top: 50px;
   }
