--- a/final-project/src/components/starsRating/StarsRating.module.scss
+++ b/final-project/src/components/starsRating/StarsRating.module.scss
@@ -2,7 +2,7 @@
   --percent: calc(var(--rating) / 5 * 100%);
 
   display: inline-block;
-  font-size: var(--star-size);
+  font-size: 20px;
   font-family: Time;
   line-height: 1;
 
@@ -16,5 +16,11 @@
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+  }
+
+  @media only screen and (min-width: 1024px) {
+    .Stars {
+      font-size: var(--star-size);
+    }
   }
 }
