--- a/final-project/src/styles/Menu.module.scss
+++ b/final-project/src/styles/Menu.module.scss
@@ -38,4 +38,26 @@
   .menu {
     display: none;
   }
+
+  .btnMenu {
+    background-color: var(--color-yellow);
+    border: none;
+    width: 80px;
+    padding: 14px, 0px;
+    color: var(--color-black);
+    font-weight: bold;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  .textName {
+    color: var(--color-yellow);
+  }
+
+  .sessionContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 8px;
+    justify-content: center;
+  }
 }
