--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -29,6 +29,40 @@
   }
 }
 
+// ---SESSION--
+.sessionLogo {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  img {
+    width: 80px;
+  }
+}
+
+.btnMenu {
+  background-color: var(--color-yellow);
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: var(--color-black);
+  font-weight: bold;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.textName {
+  color: var(--color-yellow);
+}
+
+.sessionContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 8px;
+  justify-content: center;
+}
+
 .containerInput {
   // padding-top: 20px;
 
@@ -123,6 +157,12 @@
       font-size: 30px;
       color: var(--color-white);
     }
+  }
+
+  // /SESSION
+
+  .sessionLogo {
+    display: none;
   }
 
   .containerInput {
