--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -30,8 +30,14 @@
 }
 
 // ---SESSION--
+
+.session {
+  display: flex;
+}
+
 .sessionLogo {
   width: 100%;
+  padding-top: 20px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -44,7 +50,7 @@
 .btnMenu {
   background-color: var(--color-yellow);
   border: none;
-  padding: 10px 20px;
+  padding: 8px 20px;
   font-size: 16px;
   color: var(--color-black);
   font-weight: bold;
@@ -52,7 +58,9 @@
   cursor: pointer;
 }
 .textName {
-  color: var(--color-yellow);
+  color: var(--color-blue2);
+  font-weight: 500;
+  padding-top: 10px;
 }
 
 .sessionContainer {
