--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -57,6 +57,7 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
 .textName {
   color: var(--color-blue2);
   font-weight: 500;
@@ -161,9 +162,32 @@
     height: 90vh;
 
     h1 {
-      width: 100%;
-      font-size: 30px;
+      width: 50%;
+      font-size: 34px;
+      line-height: 1.3;
       color: var(--color-white);
+    }
+    p {
+      width: 58%;
+      font-size: 20px;
+      line-height: 1.2;
+      color: var(--color-white);
+    }
+  }
+
+  .btnCallAction {
+    color: var(--color-blue2);
+    background-color: var(--color-yellow);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 20px;
+
+    &:hover {
+      color: var(--color-orange);
+      cursor: pointer;
     }
   }
 
