--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -17,15 +17,46 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 40vh;
+  height: 90vh;
   color: var(--color-white);
+}
+
+.navText {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  text-align: center;
+  width: 90%;
 
   h1 {
-    padding-top: 10px;
-    font-size: 20px;
-    width: 300px;
-    color: var(--color-blue2);
-    text-align: center;
+    font-size: 26px;
+    padding-bottom: 14px;
+    color: var(--color-yellow);
+    font-weight: 800;
+  }
+
+  p {
+    font-size: 18px;
+    color: var(--color-white);
+    font-weight: bold;
+  }
+}
+
+.btnCallAction {
+  color: var(--color-blue2);
+  background-color: var(--color-yellow);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 40px;
+
+  &:hover {
+    color: var(--color-orange);
+    cursor: pointer;
   }
 }
 
@@ -72,26 +103,24 @@
   justify-content: center;
 }
 
-.containerInput {
-  // padding-top: 20px;
+// .containerInput {
+//   input {
+//     width: 300px;
+//     height: 32px;
+//     padding-left: 8px;
+//     font-size: 16px;
+//     background-color: var(--color-blue2);
+//     color: var(--color-white);
+//     outline: none;
+//     border: none;
+//     border-radius: 4px;
+//     margin-bottom: 20px;
+//   }
 
-  input {
-    width: 300px;
-    height: 32px;
-    padding-left: 8px;
-    font-size: 16px;
-    background-color: var(--color-blue2);
-    color: var(--color-white);
-    outline: none;
-    border: none;
-    border-radius: 4px;
-    margin-bottom: 20px;
-  }
-
-  button {
-    display: none;
-  }
-}
+//   button {
+//     display: none;
+//   }
+// }
 
 // ---MAIN---
 .mainPageHome {
@@ -122,25 +151,23 @@
   width: 100%;
 }
 
-.boxSlider {
-  background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.1)),
-    url("/exp1.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 90%;
-  height: 34vh;
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;
-  padding-left: 40px;
+// .boxSlider {
+//   background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.1)),
+//     url("/exp1.jpg");
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   width: 90%;
+//   height: 34vh;
+//   border-radius: 20px;
+//   display: flex;
+//   justify-content: center;
+//   flex-direction: column;
+//   align-items: flex-start;
+//   gap: 10px;
+//   padding-left: 40px;
 
-  color: white;
-}
-
-// ---SECTION LIST ----
+//   color: white;
+// }
 
 // --FOOTER--
 .footer {
@@ -160,36 +187,30 @@
     background-position: center;
     width: 100%;
     height: 90vh;
+  }
 
+  .navText {
+    width: 60%;
     h1 {
-      width: 50%;
       font-size: 34px;
-      line-height: 1.3;
-      color: var(--color-white);
-    }
-    p {
-      width: 58%;
-      font-size: 20px;
-      line-height: 1.2;
-      color: var(--color-white);
     }
   }
 
-  .btnCallAction {
-    color: var(--color-blue2);
-    background-color: var(--color-yellow);
-    border: none;
-    padding: 10px 20px;
-    border-radius: 8px;
-    font-size: 18px;
-    font-weight: bold;
-    margin-top: 20px;
+  // .btnCallAction {
+  //   color: var(--color-blue2);
+  //   background-color: var(--color-yellow);
+  //   border: none;
+  //   padding: 10px 20px;
+  //   border-radius: 8px;
+  //   font-size: 18px;
+  //   font-weight: bold;
+  //   margin-top: 20px;
 
-    &:hover {
-      color: var(--color-orange);
-      cursor: pointer;
-    }
-  }
+  //   &:hover {
+  //     color: var(--color-orange);
+  //     cursor: pointer;
+  //   }
+  // }
 
   // /SESSION
 
@@ -197,24 +218,24 @@
     display: none;
   }
 
-  .containerInput {
-    display: flex;
-    justify-content: center;
-    // margin-top: 60px;
-    // padding-top: 60px;
+  // .containerInput {
+  //   display: flex;
+  //   justify-content: center;
+  //   // margin-top: 60px;
+  //   // padding-top: 60px;
 
-    button {
-      display: block;
-      cursor: pointer;
-      background-color: var(--color-yellow);
-      height: 32px;
-      width: 80px;
-      font-weight: bold;
-      font-size: 16px;
-      border: none;
-      border-radius: 4px;
-    }
-  }
+  //   button {
+  //     display: block;
+  //     cursor: pointer;
+  //     background-color: var(--color-yellow);
+  //     height: 32px;
+  //     width: 80px;
+  //     font-weight: bold;
+  //     font-size: 16px;
+  //     border: none;
+  //     border-radius: 4px;
+  //   }
+  // }
 
   // ----MAIN---
   // --text section--
