style: change Image

--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -181,7 +181,7 @@
         rgba(16, 14, 44, 0.836),
         rgba(16, 14, 44, 0.836)
       ),
-      url("/HomePic.jpeg");
+      url("/homePic.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
