style: adjust photo url and logoHome as Link to Home Page

--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -13,7 +13,7 @@
   gap: 20px;
   background-color: var(--color-main-first);
   background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(16, 14, 44, 0.836)),
-    url("/HomeMobile.jpeg");
+    url("/homeMobile.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
