--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -169,6 +169,43 @@
 //   color: white;
 // }
 
+// REVIEWW
+
+.containerReview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 20px 20px 20px;
+  color: var(--color-orange);
+}
+
+.imgReview img {
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.textReview {
+  width: 100%;
+  padding-bottom: 80px;
+
+  .textOne {
+    color: var(--color-yellow);
+    text-align: center;
+  }
+
+  h2 {
+    color: var(--color-white);
+    text-align: center;
+  }
+  .userReview {
+    padding-top: 20px;
+    color: var(--color-white);
+  }
+}
+
 // --FOOTER--
 .footer {
   display: none;
@@ -277,5 +314,27 @@
 
   .boxSlider {
     width: 400px;
+  }
+
+  // REVIEWW
+
+  .containerReview {
+    flex-direction: row;
+    gap: 30px;
+  }
+
+  .imgReview img {
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+  }
+
+  .textReview {
+    width: 50%;
+
+    .textOne,
+    h2 {
+      text-align: left;
+    }
   }
 }
