--- a/final-project/src/styles/globals.css
+++ b/final-project/src/styles/globals.css
@@ -24,6 +24,7 @@ ul {
   --color-back1: #edd6bb;
   --color-back2: #e7dfd5;
   --color-white: #f5efe8;
+  --color-white2: rgb(170, 170, 170);
   --color-back3: #eb5157;
   --color-blue: #1b1725;
   --color-blue2: #0a011f;
