style: containerPics display none in Mobile version

--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -169,6 +169,10 @@
 //   color: white;
 // }
 
+.containerPics {
+  display: none;
+}
+
 // REVIEWW
 
 .containerReview {
@@ -176,7 +180,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 40px 20px 20px 20px;
+  padding: 40px 20px 40px 20px;
   color: var(--color-orange);
 }
 
