--- a/final-project/src/styles/Card.module.scss
+++ b/final-project/src/styles/Card.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   max-width: 450px;
   width: 100%;
-  min-height: 300px;
+  min-height: 280px;
   border-radius: 20px;
   padding: 20px 40px 0px 40px;
   color: var(--color-white);
@@ -78,7 +78,6 @@
 @media screen and (min-width: 768px) {
   .cardBox {
     max-width: 550px;
-
-    min-height: 350px;
+    max-height: 320px;
   }
 }
