--- a/final-project/src/styles/CardList.module.scss
+++ b/final-project/src/styles/CardList.module.scss
@@ -4,5 +4,12 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 40px;
+  flex-shrink: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .CardList {
+    gap: 80px;
+  }
 }
