--- a/final-project/src/styles/Experiences.module.scss
+++ b/final-project/src/styles/Experiences.module.scss
@@ -4,24 +4,46 @@
   min-height: 100vh;
 }
 
+.navExperiences {
+  height: 80vh;
+  background-color: var(--color-blue2);
+  color: var(--color-orange);
+}
+
+.textNav {
+  padding-top: 4.375rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h1 {
+    padding: 0.625rem;
+    width: 400px;
+    line-height: 1.5;
+    font-size: 1.5rem;
+  }
+}
+
+.mainExperiences {
+  min-height: 50vh;
+  background-color: var(--color-blue2);
+  padding: 80px 20px;
+}
+
 @media screen and (min-width: 768px) {
-  .navExperiences {
-    height: 80vh;
-    background-color: var(--color-blue2);
-    color: var(--color-white);
+  .textNav {
+    padding-top: 1.25rem;
+    padding-bottom: 100px;
+    h1 {
+      width: 37.5rem;
+      line-height: 1.5;
+    }
   }
 
-  .textNav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    h1 {
-      padding: 0.625rem;
-      width: 500px;
-      line-height: 1.5;
-      font-size: 1.5rem;
-    }
+  .mainExperiences {
+    min-height: 80vh;
+    flex-shrink: 1;
+    padding-top: 100px;
   }
 }
