--- a/final-project/src/styles/Profile.module.scss
+++ b/final-project/src/styles/Profile.module.scss
@@ -12,27 +12,50 @@
   font-size: 1rem;
   justify-content: center;
   align-items: center;
-  padding-top: 5rem;
-  color: var(--color-white);
+  color: var(--color-white2);
+
+  .backTheme {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    background-image: url("/backTheme.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 0 0 20px 20px;
+    width: 100%;
+    height: 45vh;
+  }
 
   img {
+    position: absolute;
+    bottom: -100px;
     width: 12.5rem;
     height: 12.5rem;
     border-radius: 50%;
     object-fit: cover;
-    border: 4px solid var(--color-orange);
+    border: 4px solid var(--color-blue2);
   }
 
   h2 {
     font-size: 1.125rem;
-    color: var(--color-orange);
+    padding-bottom: 6px;
+    color: var(--color-yellow);
   }
 }
 
 //SESSION
 
+.containerInfo {
+  padding: 50px;
+  width: 300px;
+  border: 1px solid var(--color-white2);
+  border-radius: 8px;
+}
+
 .sessionContainer {
   display: flex;
+  padding-top: 110px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -54,10 +77,20 @@
 
 //info NAME ecc.
 
-.infoName {
+.labelInfo {
+  font-weight: bold;
+  color: var(--color-white);
+}
+
+.username,
+.email {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  padding-top: 2.5rem;
+}
+
+.infoName {
+  text-align: center;
 }
 
 .title {
@@ -68,12 +101,12 @@
 }
 
 .bookings {
-  padding-bottom: 60px;
+  padding-bottom: 100px;
 }
 
 @media screen and (min-width: 768px) {
   .nav {
-    height: 34vh;
+    // height: 34vh;
     background-color: var(--color-blue2);
   }
 
