style: Desk version Profile Page

--- a/final-project/src/styles/Profile.module.scss
+++ b/final-project/src/styles/Profile.module.scss
@@ -8,7 +8,7 @@
 .infoProfile {
   display: flex;
   flex-direction: column;
-  gap: 1.25rem;
+  gap: 30px;
   font-size: 1rem;
   justify-content: center;
   align-items: center;
@@ -19,7 +19,7 @@
     position: relative;
     justify-content: center;
     align-items: center;
-    background-image: url("/backTheme.jpeg");
+    background-image: url("/backTheme2.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 0 0 20px 20px;
@@ -106,19 +106,21 @@
 
 @media screen and (min-width: 768px) {
   .nav {
-    // height: 34vh;
     background-color: var(--color-blue2);
   }
 
-  .infoProfile {
-    padding-top: 0px;
+  .containerInfo {
+    margin-top: 100px;
+    margin-bottom: 20px;
+    height: 30vh;
   }
+
   .title {
     padding: 0px 7.5rem 2.5rem 7.5rem;
     color: var(--color-orange);
   }
   .bookings {
-    padding-bottom: 30px;
+    padding-bottom: 70px;
   }
 
   .session {
