--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -4,18 +4,30 @@
 }
 
 .containerSlider {
-  position: relative;
   width: 100%;
-  height: 70vh;
+  // height: 70vh;
+  // position: absolute;
 
-  img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+  // img {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   object-fit: cover;
+  // }
+  // .slider {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   object-fit: cover;
+  // }
+}
+
+.slider {
+  // position: absolute;
 }
 
 .containerIconHeart {
@@ -291,5 +303,9 @@
     display: block;
     background-color: rgb(43, 43, 109);
     height: 24vh;
+  }
+
+  .slider {
+    display: none;
   }
 }
