--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -26,10 +26,6 @@
   // }
 }
 
-.slider {
-  // position: absolute;
-}
-
 .containerIconHeart {
   display: flex;
   justify-content: center;
@@ -204,16 +200,27 @@
     // height: 34vh;
   }
 
-  .containerDesk {
-    padding: 30px 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    background-color: rgb(25, 31, 25);
+  .mainExperienceDetail {
+    padding: 0 60px;
   }
 
+  .titleInfo {
+    font-size: 30px;
+  }
+
+  // .containerDesk {
+  //   padding: 30px 40px;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: space-between;
+  //   width: 100%;
+  //   background-color: rgb(25, 31, 25);
+  // }
+
   .info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
   }
@@ -226,6 +233,10 @@
     display: block;
     font-weight: bold;
     padding-top: 20px;
+
+    .price {
+      font-size: 26px;
+    }
   }
 
   .containerOrganiz {
@@ -236,7 +247,6 @@
 
   // ---PIC AND DESCRIPTION---
   .picAndDescription {
-    padding-top: 20px;
     display: flex;
     width: 100%;
     height: 100%;
@@ -252,10 +262,6 @@
     h2 {
       padding-bottom: 20px;
     }
-  }
-
-  .experienceBtn {
-    margin-top: 40px;
   }
 
   .boxPicture {
@@ -291,6 +297,7 @@
     display: flex;
     width: 55vw;
     gap: 20px;
+    padding-top: 8px;
 
     .picBottom img {
       width: 17vw;
@@ -299,13 +306,27 @@
     }
   }
 
-  .footer {
-    display: block;
-    background-color: rgb(43, 43, 109);
-    height: 24vh;
+  .experienceBtn,
+  .arrowButton {
+    transition: color 0.3s;
+
+    &:hover {
+      color: var(--color-orange);
+    }
   }
 
   .slider {
     display: none;
+  }
+
+  .suggestion {
+    padding-top: 80px;
+    padding-bottom: 140px;
+
+    h2 {
+      padding-bottom: 50px;
+    }
+
+    // padding-left: 40px;
   }
 }
