--- a/final-project/src/styles/Favorites.module.scss
+++ b/final-project/src/styles/Favorites.module.scss
@@ -1,11 +1,11 @@
 .Favorites {
-  width: 100;
+  width: 100%;
   height: 100%;
   min-height: 100vh;
 }
 
 .navFavorites {
-  background-color: var(--color-blue);
+  background-color: var(--color-blue2);
   color: var(--color-orange);
   height: 80vh;
 }
@@ -27,10 +27,11 @@
 
 .mainFavorites {
   min-height: 50vh;
-  background-color: var(--color-back2);
+  padding-bottom: 6.25rem;
+  background-color: var(--color-blue2);
 }
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 768px) {
   .textNav {
     padding-top: 1.25rem;
     h1 {
@@ -41,5 +42,6 @@
 
   .mainFavorites {
     min-height: 80vh;
+    padding-bottom: 11.25rem;
   }
 }
