--- a/final-project/src/styles/AboutUs.module.scss
+++ b/final-project/src/styles/AboutUs.module.scss
@@ -13,7 +13,7 @@
   gap: 1.25rem;
   padding: 1.875rem;
   padding-bottom: 6.25rem;
-  color: var(--color-blue);
+  color: var(--color-black);
 
   h1,
   h2 {
@@ -22,7 +22,7 @@
   }
 
   a {
-    color: var(--color-white);
+    color: var(--color-blue2);
   }
 }
 
@@ -34,7 +34,7 @@
   font-weight: 450;
 }
 .values {
-  color: var(--color-white);
+  color: var(--color-blue2);
 }
 
 @media screen and (min-width: 48rem) {
