--- a/final-project/src/styles/Card.module.scss
+++ b/final-project/src/styles/Card.module.scss
@@ -1,10 +1,10 @@
 .cardBox {
   position: relative;
-  max-width: 450px;
+  max-width: 28.125rem;
   width: 100%;
-  min-height: 280px;
-  border-radius: 20px;
-  padding: 20px 40px 0px 40px;
+  min-height: 17.5rem;
+  border-radius: 1.25rem;
+  padding: 1.25rem 2.5rem 0rem 2.5rem;
   color: var(--color-white);
   cursor: pointer;
   overflow: hidden;
@@ -41,28 +41,28 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 130px;
+    height: 8.125rem;
     width: 100%;
     background: rgba(224, 215, 215, 0.363);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(.625rem);
+    backdrop-filter: blur(.625rem);
     color: var(--color-blue2);
-    padding-right: 40px;
-    padding-top: 10px;
+    padding-right: 2.5rem;
+    padding-top: .625rem;
 
     h4 {
-      font-size: 18px;
+      font-size: 1.125rem;
     }
 
     p {
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: bold;
     }
 
     .containerCity {
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: .5rem;
     }
 
     .iconCity {
@@ -75,9 +75,9 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .cardBox {
-    max-width: 550px;
-    max-height: 320px;
+    max-width: 34.375rem;
+    max-height: 20rem;
   }
 }
