--- a/final-project/src/styles/CardList.module.scss
+++ b/final-project/src/styles/CardList.module.scss
@@ -4,12 +4,12 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 40px;
+  gap: 2.5rem;
   flex-shrink: 1;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .CardList {
-    gap: 80px;
+    gap: 5rem;
   }
 }
