--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -5,25 +5,6 @@
 
 .containerSlider {
   width: 100%;
-  // height: 70vh;
-  // position: absolute;
-
-  // img {
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   object-fit: cover;
-  // }
-  // .slider {
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   object-fit: cover;
-  // }
 }
 
 .containerIconHeart {
@@ -47,13 +28,6 @@
   background-color: var(--color-blue2);
   color: var(--color-white);
 }
-
-// .info {
-//   display: flex;
-//   align-items: baseline;
-//   justify-content: space-between;
-//   flex-wrap: wrap;
-// }
 
 .titleInfo {
   line-height: 1.3;
@@ -126,7 +100,6 @@
 
 .btnContainer {
   display: flex;
-  // justify-content: center;
   align-items: center;
   gap: 2.5rem;
 }
@@ -167,8 +140,8 @@
   padding: 0.625rem 1.25rem;
   font-size: 1rem;
   font-weight: bold;
-  background-color: rgb(29, 29, 61);
-  color: rgb(243, 239, 239);
+  background-color: var(--color-blueBtn);
+  color: var(--color-white);
   border: none;
   border-radius: 0.625rem;
 }
@@ -197,7 +170,6 @@
 
   .navExperienceDetail {
     background-color: var(--color-blue2);
-    // height: 34vh;
   }
 
   .mainExperienceDetail {
@@ -207,15 +179,6 @@
   .titleInfo {
     font-size: 1.875rem;
   }
-
-  // .containerDesk {
-  //   padding: 1.875rem 2.5rem;
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: space-between;
-  //   width: 100%;
-  //   background-color: rgb(25, 31, 25);
-  // }
 
   .info {
     display: flex;
@@ -286,7 +249,7 @@
       top: 1.25rem;
       right: 2.5rem;
       cursor: pointer;
-      background-color: white;
+      background-color: var(--color-white);
       padding: 0.625rem;
       border-radius: 50%;
       border: none;
@@ -326,7 +289,5 @@
     h2 {
       padding-bottom: 3.125rem;
     }
-
-    // padding-left: 2.5rem;
   }
 }
