--- a/final-project/src/styles/Home.module.scss
+++ b/final-project/src/styles/Home.module.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 1.25rem;
   background-color: var(--color-main-first);
   background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(16, 14, 44, 0.836)),
     url("/homeMobile.jpeg");
@@ -26,19 +26,19 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  gap: .625rem;
   text-align: center;
   width: 90%;
 
   h1 {
-    font-size: 26px;
-    padding-bottom: 14px;
+    font-size: 1.625rem;
+    padding-bottom: .875rem;
     color: var(--color-yellow);
     font-weight: 800;
   }
 
   p {
-    font-size: 18px;
+    font-size: 1.125rem;
     color: var(--color-white);
     font-weight: bold;
   }
@@ -48,11 +48,11 @@
   color: var(--color-blue2);
   background-color: var(--color-yellow);
   border: none;
-  padding: 10px 20px;
-  border-radius: 8px;
-  font-size: 18px;
+  padding: .625rem 1.25rem;
+  border-radius: .5rem;
+  font-size: 1.125rem;
   font-weight: bold;
-  margin-top: 40px;
+  margin-top: 2.5rem;
 
   &:hover {
     color: var(--color-orange);
@@ -68,59 +68,41 @@
 
 .sessionLogo {
   width: 100%;
-  padding-top: 20px;
+  padding-top: 1.25rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
 
   img {
-    width: 80px;
+    width: 5rem;
   }
 }
 
 .btnMenu {
   background-color: var(--color-yellow);
   border: none;
-  padding: 8px 20px;
-  font-size: 16px;
+  padding: .5rem 1.25rem;
+  font-size: 1rem;
   color: var(--color-black);
   font-weight: bold;
-  border-radius: 8px;
+  border-radius: .5rem;
   cursor: pointer;
 }
 
 .textName {
   color: var(--color-blue2);
   font-weight: 500;
-  padding-top: 10px;
+  padding-top: .625rem;
 }
 
 .sessionContainer {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  gap: 8px;
+  gap: .5rem;
   justify-content: center;
 }
 
-// .containerInput {
-//   input {
-//     width: 300px;
-//     height: 32px;
-//     padding-left: 8px;
-//     font-size: 16px;
-//     background-color: var(--color-blue2);
-//     color: var(--color-white);
-//     outline: none;
-//     border: none;
-//     border-radius: 4px;
-//     margin-bottom: 20px;
-//   }
-
-//   button {
-//     display: none;
-//   }
-// }
 
 // ---MAIN---
 .mainPageHome {
@@ -134,7 +116,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 40px 20px 20px 20px;
+  padding: 2.5rem 1.25rem 1.25rem 1.25rem;
   color: var(--color-orange);
 
   a {
@@ -151,34 +133,17 @@
   width: 100%;
 }
 
-// .boxSlider {
-//   background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.1)),
-//     url("/exp1.jpg");
-//   background-repeat: no-repeat;
-//   background-size: cover;
-//   width: 90%;
-//   height: 34vh;
-//   border-radius: 20px;
-//   display: flex;
-//   justify-content: center;
-//   flex-direction: column;
-//   align-items: flex-start;
-//   gap: 10px;
-//   padding-left: 40px;
-
-//   color: white;
-// }
 
 .listCheck {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 40px 20px 40px 20px;
+  padding: 2.5rem 1.25rem 2.5rem 1.25rem;
 
   h2 {
     color: var(--color-white);
-    padding-bottom: 30px;
+    padding-bottom: 1.875rem;
     text-align: center;
   }
 
@@ -190,8 +155,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    padding-bottom: 10px;
+    gap: 1.25rem;
+    padding-bottom: .625rem;
     width: 94%;
     color: var(--color-white2);
   }
@@ -208,20 +173,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 40px 20px 40px 20px;
+  padding: 2.5rem 1.25rem 2.5rem 1.25rem;
   color: var(--color-orange);
 }
 
 .imgReview img {
   width: 100%;
-  height: 400px;
-  border-radius: 10px;
+  height: 25rem;
+  border-radius: .625rem;
   object-fit: cover;
 }
 
 .textReview {
   width: 100%;
-  padding-bottom: 80px;
+  padding-bottom: 5rem;
 
   .textOne {
     color: var(--color-yellow);
@@ -233,7 +198,7 @@
     text-align: center;
   }
   .userReview {
-    padding-top: 20px;
+    padding-top: 1.25rem;
     color: var(--color-white2);
   }
 }
@@ -243,7 +208,7 @@
   display: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   // ----NAV---
   .navPageHome {
     background: linear-gradient(
@@ -261,25 +226,11 @@
   .navText {
     width: 60%;
     h1 {
-      font-size: 34px;
+      font-size: 2.125rem;
     }
   }
 
-  // .btnCallAction {
-  //   color: var(--color-blue2);
-  //   background-color: var(--color-yellow);
-  //   border: none;
-  //   padding: 10px 20px;
-  //   border-radius: 8px;
-  //   font-size: 18px;
-  //   font-weight: bold;
-  //   margin-top: 20px;
-
-  //   &:hover {
-  //     color: var(--color-orange);
-  //     cursor: pointer;
-  //   }
-  // }
+  
 
   // /SESSION
 
@@ -287,24 +238,6 @@
     display: none;
   }
 
-  // .containerInput {
-  //   display: flex;
-  //   justify-content: center;
-  //   // margin-top: 60px;
-  //   // padding-top: 60px;
-
-  //   button {
-  //     display: block;
-  //     cursor: pointer;
-  //     background-color: var(--color-yellow);
-  //     height: 32px;
-  //     width: 80px;
-  //     font-weight: bold;
-  //     font-size: 16px;
-  //     border: none;
-  //     border-radius: 4px;
-  //   }
-  // }
 
   // ----MAIN---
   // --text section--
@@ -313,97 +246,97 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 100px 40px 100px 40px;
-    gap: 10px;
+    padding: 6.25rem 2.5rem 6.25rem 2.5rem;
+    gap: .625rem;
     width: 100%;
     background-color: var(--color-blue2);
     color: var(--color-orange);
 
     h2,
     p {
-      width: 700px;
+      width: 43.75rem;
     }
 
     h2 {
       text-align: center;
-      font-size: 40px;
+      font-size: 2.5rem;
       color: var(--color-orange);
     }
   }
 
   .titleAndLink {
-    padding: 40px 120px 40px 120px;
+    padding: 2.5rem 7.5rem 2.5rem 7.5rem;
   }
 
   // SLIDER NO DESK
   .containerSlider {
-    padding: 40px 120px 40px 120px;
+    padding: 2.5rem 7.5rem 2.5rem 7.5rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 1.875rem;
   }
 
   .boxSlider {
-    width: 400px;
+    width: 25rem;
   }
 
   .listCheck {
-    padding-top: 100px;
+    padding-top: 6.25rem;
 
     .check {
-      min-width: 80px;
+      min-width: 5rem;
     }
 
     li {
       justify-content: flex-start;
-      max-width: 800px;
+      max-width: 50rem;
     }
   }
 
   // 3 pic section
   .containerPics {
     display: flex;
-    gap: 20px;
-    padding: 120px 120px 40px 120px;
+    gap: 1.25rem;
+    padding: 7.5rem 7.5rem 2.5rem 7.5rem;
 
     .side {
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: .625rem;
       align-items: center;
     }
 
     .side img {
-      height: 200px;
-      width: 300px;
-      border-radius: 10px;
+      height: 12.5rem;
+      width: 18.75rem;
+      border-radius: .625rem;
       object-fit: cover;
     }
 
     .fullwidth img {
-      height: 410px;
-      width: 300px;
-      border-radius: 10px;
+      height: 25.625rem;
+      width: 18.75rem;
+      border-radius: .625rem;
       object-fit: cover;
     }
 
     .textReview {
-      padding-right: 40px;
-      width: 500px;
+      padding-right: 2.5rem;
+      width: 31.25rem;
     }
 
     .numbers {
       display: flex;
-      gap: 20px;
-      padding-top: 20px;
+      gap: 1.25rem;
+      padding-top: 1.25rem;
 
       h4 {
         color: var(--color-orange);
       }
       p {
         color: var(--color-white2);
-        font-size: 14px;
+        font-size: .875rem;
         font-weight: bold;
       }
     }
@@ -413,12 +346,12 @@
 
   .containerReview {
     flex-direction: row;
-    gap: 30px;
+    gap: 1.875rem;
   }
 
   .imgReview img {
-    width: 400px;
-    height: 400px;
+    width: 25rem;
+    height: 25rem;
     border-radius: 50%;
   }
 
