--- a/final-project/src/styles/Menu.module.scss
+++ b/final-project/src/styles/Menu.module.scss
@@ -4,10 +4,9 @@
   left: 0;
   width: 100%;
   background-color: var(--color-blue2);
-  // border-top: 1px solid var(--color-orange);
   display: flex;
   justify-content: space-around;
-  padding: 14px 0;
+  padding: .875rem 0;
   z-index: 3;
 
   a {
@@ -19,7 +18,7 @@
   display: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .containerImage {
     cursor: pointer;
   }
@@ -29,11 +28,11 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 16px 40px;
+    padding: 1rem 2.5rem;
 
     .topMenu {
       display: flex;
-      gap: 14px;
+      gap: .875rem;
     }
 
     a {
@@ -48,11 +47,11 @@
   .btnMenu {
     background-color: var(--color-yellow);
     border: none;
-    width: 80px;
-    padding: 14px, 0px;
+    width: 5rem;
+    padding: .875rem, 0rem;
     color: var(--color-black);
     font-weight: bold;
-    border-radius: 8px;
+    border-radius: .5rem;
     cursor: pointer;
   }
   .textName {
@@ -63,7 +62,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    gap: 8px;
+    gap: .5rem;
     justify-content: center;
   }
 }
