--- a/final-project/src/styles/ModalConfirmation.module.scss
+++ b/final-project/src/styles/ModalConfirmation.module.scss
@@ -19,8 +19,8 @@
 }
 
 .modal {
-  padding: 30px;
-  border-radius: 10px;
+  padding: 1.875rem;
+  border-radius: .625rem;
   background-color: rgb(219, 213, 213);
 }
 
@@ -32,11 +32,11 @@
   color: rgb(106, 121, 206);
 
   button {
-    margin-top: 20px;
+    margin-top: 1.25rem;
     align-items: center;
-    padding: 10px 10px;
+    padding: .625rem .625rem;
     border: none;
-    border-radius: 5px;
+    border-radius: .3125rem;
     background-color: rgb(106, 121, 206);
     color: white;
     cursor: pointer;
