--- a/final-project/src/styles/Profile.module.scss
+++ b/final-project/src/styles/Profile.module.scss
@@ -8,8 +8,8 @@
 .infoProfile {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  font-size: 1rem;
+  gap: 1.875rem;
+  font-size: 16px;
   justify-content: center;
   align-items: center;
   color: var(--color-white2);
@@ -22,24 +22,24 @@
     background-image: url("/backTheme2.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 0 0 20px 20px;
+    border-radius: 0 0 1.25rem 1.25rem;
     width: 100%;
     height: 45vh;
   }
 
   img {
     position: absolute;
-    bottom: -100px;
-    width: 12.5rem;
-    height: 12.5rem;
+    bottom: -6.25rem;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     object-fit: cover;
-    border: 4px solid var(--color-blue2);
+    border: 0.25rem solid var(--color-blue2);
   }
 
   h2 {
-    font-size: 1.125rem;
-    padding-bottom: 6px;
+    font-size: 18px;
+    padding-bottom: 0.375rem;
     color: var(--color-yellow);
   }
 }
@@ -47,28 +47,28 @@
 //SESSION
 
 .containerInfo {
-  padding: 50px;
-  width: 300px;
-  border: 1px solid var(--color-white2);
-  border-radius: 8px;
+  padding: 3.125rem;
+  width: 18.75rem;
+  border: 0.0625rem solid var(--color-white2);
+  border-radius: 0.5rem;
 }
 
 .sessionContainer {
   display: flex;
-  padding-top: 110px;
+  padding-top: 6.875rem;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 0.625rem;
 }
 
 .btnMenu {
   background-color: var(--color-yellow);
   border: none;
-  padding: 10px 24px;
+  padding: 0.625rem 1.5rem;
   color: var(--color-black);
   font-weight: bold;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   cursor: pointer;
 }
 .textName {
@@ -95,32 +95,32 @@
 
 .title {
   color: var(--color-orange);
-  font-size: 1.25rem;
-  padding-top: 30px;
+  font-size: 20px;
+  padding-top: 1.875rem;
   text-align: center;
 }
 
 .bookings {
-  padding-bottom: 100px;
+  padding-bottom: 6.25rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .nav {
     background-color: var(--color-blue2);
   }
 
   .containerInfo {
-    margin-top: 100px;
-    margin-bottom: 20px;
+    margin-top: 6.25rem;
+    margin-bottom: 1.25rem;
     height: 30vh;
   }
 
   .title {
-    padding: 0px 7.5rem 2.5rem 7.5rem;
+    padding: 0rem 7.5rem 2.5rem 7.5rem;
     color: var(--color-orange);
   }
   .bookings {
-    padding-bottom: 70px;
+    padding-bottom: 4.375rem;
   }
 
   .session {
