--- a/final-project/src/styles/SignUpForm.module.scss
+++ b/final-project/src/styles/SignUpForm.module.scss
@@ -1,22 +1,21 @@
 .SignUpForm {
   position: relative;
-  max-width: 400px;
+  max-width: 25rem;
   max-height: 70%;
   margin: 0 auto;
-  padding: 40px;
-  border-radius: 5px;
+  padding: 2.5rem;
+  border-radius: .3125rem;
   background-color: var(--color-blue2);
 
   label {
-    margin-bottom: 5px;
+    margin-bottom: .3125rem;
     color: var(--color-white);
-    font-size: 16px;
-    // font-weight: bold;
+    font-size: 1rem;
   }
 
   .required {
     color: var(--color-orange);
-    font-size: 14px;
+    font-size: .875rem;
     font-weight: bold;
     padding: 0;
     margin: 0;
@@ -27,21 +26,21 @@
   input[type="password"],
   textarea {
     width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
+    padding: .5rem;
+    margin-bottom: .625rem;
     border: none;
-    border-radius: 3px;
+    border-radius: .1875rem;
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   .btnSubmit {
-    padding: 10px;
-    margin-top: 10px;
+    padding: .625rem;
+    margin-top: .625rem;
     margin: auto 0;
     width: 100%;
     border: none;
-    border-radius: 3px;
+    border-radius: .1875rem;
     background-color: var(--color-yellow);
     color: var(--color-blue2);
     cursor: pointer;
@@ -56,9 +55,9 @@
     display: flex;
     justify-content: center;
     position: absolute;
-    top: -10px;
-    padding: 4px;
-    right: 10px;
+    top: -0.625rem;
+    padding: .25rem;
+    right: .625rem;
     cursor: pointer;
   }
 }
