--- a/final-project/src/styles/globals.css
+++ b/final-project/src/styles/globals.css
@@ -30,6 +30,7 @@ ul {
   --color-blue2: #0a011f;
   --color-yellow: #ffcf56;
   --color-orange: #cf4012;
+  --color-blueBtn: rgb(29, 29, 61);
 }
 
 img {
