style: convert from px to rem

--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -85,8 +85,8 @@
 .organizPicture {
 
   img {
-    max-width: 130px;
-    max-height: 130px;
+    max-width: 8.125rem;
+    max-height: 8.125rem;
     border-radius: 50%;
     object-fit: cover;
   }
