--- a/final-project/src/styles/ExperienceDetail.module.scss
+++ b/final-project/src/styles/ExperienceDetail.module.scss
@@ -83,7 +83,6 @@
   align-items: center;
 }
 .organizPicture {
-
   img {
     max-width: 8.125rem;
     max-height: 8.125rem;
@@ -264,6 +263,7 @@
     padding-top: 0.5rem;
 
     .picBottom img {
+      cursor: pointer;
       width: 17vw;
       height: 24vh;
       border-radius: 1.25rem;
